Add e2e tests for venafi cloud
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/test/e2e/suite/issuers/venafi/BUILD.bazel
+++ b/test/e2e/suite/issuers/venafi/BUILD.bazel
@@ -21,6 +21,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/e2e/suite/issuers/venafi/addon:all-srcs",
+        "//test/e2e/suite/issuers/venafi/cloud:all-srcs",
         "//test/e2e/suite/issuers/venafi/tpp:all-srcs",
     ],
     tags = ["automanaged"],
