Make Venafi issuer async
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/pkg/issuer/venafi/client/BUILD.bazel
+++ b/pkg/issuer/venafi/client/BUILD.bazel
@@ -3,14 +3,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "sign.go",
-        "venafi.go",
+        "customfield.go",
+        "request.go",
+        "venaficlient.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/venafi",
+    importpath = "github.com/jetstack/cert-manager/pkg/issuer/venafi/client",
     visibility = ["//pkg:__subpackages__"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_venafi_vcert//:go_default_library",
         "@com_github_venafi_vcert//pkg/certificate:go_default_library",
@@ -30,8 +30,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//pkg/internal/venafi/api:all-srcs",
-        "//pkg/internal/venafi/fake:all-srcs",
+        "//pkg/issuer/venafi/client/fake:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
@@ -40,15 +39,14 @@ filegroup(
 go_test(
     name = "go_default_test",
     srcs = [
-        "sign_test.go",
-        "venafi_test.go",
+        "request_test.go",
+        "venaficlient_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/internal/venafi/api:go_default_library",
-        "//pkg/internal/venafi/fake:go_default_library",
+        "//pkg/issuer/venafi/client/fake:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
