--- a/pkg/controller/certificaterequests/venafi/BUILD.bazel
+++ b/pkg/controller/certificaterequests/venafi/BUILD.bazel
@@ -8,15 +8,16 @@ go_library(
     deps = [
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/certificaterequests/util:go_default_library",
-        "//pkg/internal/venafi:go_default_library",
-        "//pkg/internal/venafi/api:go_default_library",
         "//pkg/issuer:go_default_library",
+        "//pkg/issuer/venafi/client:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_venafi_vcert//pkg/endpoint:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
     ],
 )
@@ -46,9 +47,8 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/internal/venafi:go_default_library",
-        "//pkg/internal/venafi/api:go_default_library",
-        "//pkg/internal/venafi/fake:go_default_library",
+        "//pkg/issuer/venafi/client:go_default_library",
+        "//pkg/issuer/venafi/client/fake:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "//test/unit/listers:go_default_library",
