--- a/pkg/issuer/venafi/BUILD.bazel
+++ b/pkg/issuer/venafi/BUILD.bazel
@@ -13,8 +13,8 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
-        "//pkg/internal/venafi:go_default_library",
         "//pkg/issuer:go_default_library",
+        "//pkg/issuer/venafi/client:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_klog//:go_default_library",
@@ -30,7 +30,10 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//pkg/issuer/venafi/client:all-srcs",
+    ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
@@ -43,8 +46,8 @@ go_test(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/internal/venafi:go_default_library",
-        "//pkg/internal/venafi/fake:go_default_library",
+        "//pkg/issuer/venafi/client:go_default_library",
+        "//pkg/issuer/venafi/client/fake:go_default_library",
         "//pkg/util:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
