--- a/cmd/ctl/pkg/create/BUILD.bazel
+++ b/cmd/ctl/pkg/create/BUILD.bazel
@@ -13,8 +13,11 @@ go_library(
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/util/pki:go_default_library",
+        "//pkg/webhook:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_cli_runtime//pkg/resource:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
