--- a/test/e2e/framework/helper/validations/BUILD.bazel
+++ b/test/e2e/framework/helper/validations/BUILD.bazel
@@ -2,10 +2,16 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["doc.go"],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/venafi/cloud",
+    srcs = ["certificates.go"],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/framework/helper/validations",
     visibility = ["//visibility:public"],
-    deps = ["//test/e2e/framework:go_default_library"],
+    deps = [
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/util:go_default_library",
+        "//pkg/util/pki:go_default_library",
+        "//test/e2e/framework/helper:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+    ],
 )
 
 filegroup(
