--- a/test/e2e/suite/conformance/BUILD.bazel
+++ b/test/e2e/suite/conformance/BUILD.bazel
@@ -2,7 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["doc.go"],
+    srcs = ["import.go"],
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance",
     tags = ["manual"],
     visibility = ["//visibility:public"],
@@ -12,6 +12,7 @@ go_library(
         "//test/e2e/suite/conformance/certificates/selfsigned:go_default_library",
         "//test/e2e/suite/conformance/certificates/vault:go_default_library",
         "//test/e2e/suite/conformance/certificates/venafi:go_default_library",
+        "//test/e2e/suite/conformance/certificates/venaficloud:go_default_library",
         "//test/e2e/suite/conformance/rbac:go_default_library",
     ],
 )
