--- a/test/e2e/suite/issuers/vault/BUILD.bazel
+++ b/test/e2e/suite/issuers/vault/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "doc.go",
+        "import.go",
         "issuer.go",
     ],
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/vault",
