--- a/test/integration/ctl/BUILD.bazel
+++ b/test/integration/ctl/BUILD.bazel
@@ -4,11 +4,13 @@ go_test(
     name = "go_default_test",
     srcs = [
         "ctl_convert_test.go",
+        "ctl_create_cr_test.go",
         "ctl_renew_test.go",
     ],
     data = glob(["testdata/**"]),
     deps = [
         "//cmd/ctl/pkg/convert:go_default_library",
+        "//cmd/ctl/pkg/create:go_default_library",
         "//cmd/ctl/pkg/renew:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
