--- a/pkg/controller/certificaterequests/venafi/BUILD.bazel
+++ b/pkg/controller/certificaterequests/venafi/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/controller/certificaterequests/util:go_default_library",
         "//pkg/issuer:go_default_library",
         "//pkg/issuer/venafi/client:go_default_library",
+        "//pkg/issuer/venafi/client/api:go_default_library",
         "//pkg/logs:go_default_library",
         "@com_github_venafi_vcert//pkg/endpoint:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -48,6 +49,7 @@ go_test(
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/issuer/venafi/client:go_default_library",
+        "//pkg/issuer/venafi/client/api:go_default_library",
         "//pkg/issuer/venafi/client/fake:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
