--- a/pkg/issuer/acme/http/BUILD.bazel
+++ b/pkg/issuer/acme/http/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//pkg/logs:go_default_library",
         "@io_istio_api//networking/v1beta1:go_default_library",
         "@io_istio_client_go//pkg/apis/networking/v1beta1:go_default_library",
+        "@io_istio_client_go//pkg/listers/networking/v1beta1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//extensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
@@ -37,7 +38,7 @@ go_test(
     srcs = [
         "http_test.go",
         "ingress_test.go",
-        #        "istio_test.go",
+        "istio_test.go",
         "pod_test.go",
         "service_test.go",
         "util_test.go",
@@ -47,6 +48,7 @@ go_test(
         "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//test/unit/gen:go_default_library",
+        "@io_istio_client_go//pkg/apis/networking/v1beta1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//extensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
