--- a/cmd/ctl/pkg/certificate/BUILD.bazel
+++ b/cmd/ctl/pkg/certificate/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//cmd/ctl/pkg/certificate/status:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
+        "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
     ],
 )
 
