--- a/cmd/ctl/pkg/certificate/status/BUILD.bazel
+++ b/cmd/ctl/pkg/certificate/status/BUILD.bazel
@@ -6,10 +6,13 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/certificate/status",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
+        "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
     ],
