--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -74,6 +74,7 @@ filegroup(
         "//pkg/client/listers/certmanager/v1alpha2:all-srcs",
         "//pkg/client/listers/certmanager/v1alpha3:all-srcs",
         "//pkg/controller:all-srcs",
+        "//pkg/ctl:all-srcs",
         "//pkg/feature:all-srcs",
         "//pkg/internal:all-srcs",
         "//pkg/issuer:all-srcs",
