--- a/pkg/controller/expcertificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/expcertificates/trigger/policies/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
+        "@io_k8s_utils//clock:go_default_library",
     ],
 )
 
