--- a/pkg/controller/expcertificates/trigger/policies/BUILD.bazel
+++ b/pkg/controller/expcertificates/trigger/policies/BUILD.bazel
@@ -33,6 +33,7 @@ go_test(
         "//pkg/util/pki:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
 
