--- a/cmd/ctl/pkg/status/certificate/BUILD.bazel
+++ b/cmd/ctl/pkg/status/certificate/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/ctl/pkg/status/certificate",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/util/predicate:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
