--- a/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
+++ b/cmd/ctl/pkg/create/certificaterequest/BUILD.bazel
@@ -8,8 +8,8 @@ go_library(
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/ctl:go_default_library",
         "//pkg/util/pki:go_default_library",
-        "//pkg/webhook:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
