--- a/cmd/webhook/app/BUILD.bazel
+++ b/cmd/webhook/app/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/webhook/handlers:go_default_library",
         "//pkg/webhook/server:go_default_library",
         "//pkg/webhook/server/tls:go_default_library",
+        "@com_github_go_logr_logr//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_client_go//tools/clientcmd:go_default_library",
     ],
