--- a/cmd/acmesolver/app/BUILD.bazel
+++ b/cmd/acmesolver/app/BUILD.bazel
@@ -7,6 +7,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/issuer/acme/http/solver:go_default_library",
+        "//pkg/logs:go_default_library",
+        "//pkg/util:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
