--- a/pkg/api/BUILD.bazel
+++ b/pkg/api/BUILD.bazel
@@ -9,8 +9,10 @@ go_library(
         "//pkg/acme/webhook/apis/acme/v1alpha1:go_default_library",
         "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/acme/v1alpha3:go_default_library",
+        "//pkg/apis/acme/v1beta1:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha3:go_default_library",
+        "//pkg/apis/certmanager/v1beta1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_api//auditregistration/v1alpha1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
