--- a/pkg/issuer/acme/dns/BUILD.bazel
+++ b/pkg/issuer/acme/dns/BUILD.bazel
@@ -73,6 +73,8 @@ filegroup(
         "//pkg/issuer/acme/dns/clouddns:all-srcs",
         "//pkg/issuer/acme/dns/cloudflare:all-srcs",
         "//pkg/issuer/acme/dns/digitalocean:all-srcs",
+        "//pkg/issuer/acme/dns/dyndns:all-srcs",
+        "//pkg/issuer/acme/dns/ocidns:all-srcs",
         "//pkg/issuer/acme/dns/rfc2136:all-srcs",
         "//pkg/issuer/acme/dns/route53:all-srcs",
         "//pkg/issuer/acme/dns/util:all-srcs",
